Allow comparison of national and state data
National and state data can now be displayed at the same time.

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
 
       <fieldset>
         <legend>Select information to display</legend>
-        <input type="radio" id="use-national" name="data-kind" checked>
+        <input type="checkbox" id="use-national" name="data-kind" checked>
         <label for="use-national">National</label>
 
-        <input type="radio" id="use-state" name="data-kind">
+        <input type="checkbox" id="use-state" name="data-kind">
         <label for="use-state">State</label>
       </fieldset>
 
