Remove animations flag, modify data display defaults
Animations don't really seem useful, so the flag to enable/disable them has been removed and they are now permanently disabled.  Defaults for types of data shown has been updated to reduce initial clutter.

--- a/index.html
+++ b/index.html
@@ -21,11 +21,6 @@
         <label for="use-logarithmic">Use Logarithmic Scale</label>
       </div>
 
-      <div>
-        <input type="checkbox" id="use-animations" value="use-animations" checked>
-        <label for="use-animations">Use Animations</label>
-      </div>
-
       <hr />
 
       <div>
@@ -34,23 +29,23 @@
       </div>
 
       <div>
-        <input type="checkbox" id="display-negative" value="display-negative">
-        <label for="display-negative">Display Negative COVID cases</label>
+        <input type="checkbox" id="display-deaths" value="display-deaths" checked>
+        <label for="display-deaths">Display COVID related deaths</label>
       </div>
 
       <div>
-        <input type="checkbox" id="display-pending" value="display-pending" checked>
-        <label for="display-pending">Display Pending COVID cases</label>
-      </div>
-
-      <div>
-        <input type="checkbox" id="display-hospitalized" value="display-hospitalized" checked>
+        <input type="checkbox" id="display-hospitalized" value="display-hospitalized">
         <label for="display-hospitalized">Display Hospitalized COVID cases</label>
       </div>
 
       <div>
-        <input type="checkbox" id="display-deaths" value="display-deaths" checked>
-        <label for="display-deaths">Display COVID related deaths</label>
+        <input type="checkbox" id="display-pending" value="display-pending">
+        <label for="display-pending">Display Pending COVID cases</label>
+      </div>
+
+      <div>
+        <input type="checkbox" id="display-negative" value="display-negative">
+        <label for="display-negative">Display Negative COVID cases</label>
       </div>
 
     </fieldset>
