Add capability for viewing data on a day-by-day basis

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
         <label for="use-logarithmic">Use Logarithmic Scale</label>
       </div>
 
+      <div>
+        <input type="checkbox" id="use-delta" value="use-delta">
+        <label for="use-delta">Display Data Day-by-Day</label>
+      </div>
+
       <hr />
 
       <div>
